--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "start-cached": "react-native start --reset-cache"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.9",
@@ -16,7 +17,6 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
@@ -32,10 +32,12 @@
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.9",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
