A bunch of things
For backend, it includes changing the blueprint file to __init__ for meaning, use secret key for jwt encode thing, simple user for returning data to frontend... For frontend, encrypted storage for data storing (like cookies), custom hook for user, trying to include the user management into the homepage (mainly), login and register page (partly, they don't use much of user management. Like, they just want to know if the user is logged in or not... Bonus note: Should commit more frequently(?), or maybe separate commit...

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 PORT=5000
 POSTGRES_URL = "postgres://default:UsJGmn9g3wfi@ep-silent-bar-34400875.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+
+# Secret key
+SECRET_KEY=ookamimiowakyoumokawaii
