--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-BACKEND_URL=http://616a-2405-4800-5b0e-2bd5-9932-c1fe-a0cf-df53.ngrok.io
+BACKEND_URL=https://eb89-2405-4800-5b0e-2bd5-15e3-6dd4-4220-3c15.ngrok.io
