--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
