--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "start-cached": "react-native start --reset-cache"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.16",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
@@ -21,7 +22,8 @@
     "react-native-gesture-handler": "^2.13.4",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+    "react-native-screens": "^3.27.0",
+    "react-native-vision-camera": "^3.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
