--- a/frontend/android/build.gradle
+++ b/frontend/android/build.gradle
@@ -3,11 +3,11 @@
 buildscript {
     ext {
         buildToolsVersion = "33.0.0"
-        minSdkVersion = 21
+        minSdkVersion = 28
         compileSdkVersion = 33
         targetSdkVersion = 33
-
-        // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
+        supportLibVersion = "28.0.0"
+        kotlinVersion = "1.7.20"
         ndkVersion = "23.1.7779620"
     }
     repositories {
@@ -17,5 +17,6 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle")
         classpath("com.facebook.react:react-native-gradle-plugin")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20")
     }
 }
