--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,51 +1,36 @@
 {
   "name": "frontend",
-  "version": "0.0.1",
-  "private": true,
+  "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest",
-    "start-cached": "react-native start --reset-cache"
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "start-tunnel": "expo start --tunnel"
   },
   "dependencies": {
-    "@react-native-community/checkbox": "^0.5.16",
+    "@react-native-async-storage/async-storage": "^1.19.8",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
+    "expo": "~49.0.15",
+    "expo-camera": "^13.6.0",
+    "expo-checkbox": "^2.5.0",
+    "expo-face-detector": "^12.4.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "^2.6.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-encrypted-storage": "^4.0.3",
-    "react-native-gesture-handler": "^2.13.4",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0",
-    "react-native-vision-camera": "^3.6.8",
-    "react-native-worklets-core": "^0.2.4"
+    "react-native-safe-area-context": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "@react-native/eslint-config": "^0.72.2",
-    "@react-native/metro-config": "^0.72.11",
-    "@tsconfig/react-native": "^3.0.0",
-    "@types/react": "^18.0.24",
-    "@types/react-test-renderer": "^18.0.0",
-    "babel-jest": "^29.2.1",
-    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "eslint": "^8.19.0",
-    "jest": "^29.2.1",
-    "metro-react-native-babel-preset": "0.76.8",
-    "prettier": "^2.4.1",
-    "react-native-dotenv": "^3.4.9",
-    "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4"
+    "react-native-dotenv": "^3.4.9"
   },
-  "engines": {
-    "node": ">=16"
-  }
+  "private": true
 }
