--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "start-tunnel": "expo start --tunnel"
+    "start-tunnel": "expo start --tunnel",
+    "start-tunnel-c": "expo start -c --tunnel"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.8",
