--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "start-tunnel": "expo start --tunnel",
-    "start-tunnel-c": "expo start -c --tunnel"
+    "start-tunnel-c": "expo start -c --tunnel",
+    "start-c": "expo start -c"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.8",
