--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,28 +7,29 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "start-tunnel": "expo start --tunnel",
-    "start-tunnel-c": "expo start -c --tunnel",
+    "start-l": "expo start --localhost",
+    "start-l-c": "expo start -c --localhost",
     "start-c": "expo start -c"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.19.8",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "axios": "^1.6.2",
     "expo": "~49.0.15",
-    "expo-camera": "^13.6.0",
-    "expo-checkbox": "^2.5.0",
-    "expo-face-detector": "^12.4.0",
+    "expo-camera": "~13.4.4",
+    "expo-checkbox": "~2.4.0",
+    "expo-face-detector": "~12.2.0",
+    "expo-image-manipulator": "~11.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "^2.6.0",
+    "expo-system-ui": "~2.4.0",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.14.0",
-    "react-native-reanimated": "^3.5.4",
-    "react-native-safe-area-context": "^4.7.4"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
