Frontend bounding box
Add drawing bounding box directly on the phone, also modify a little the phone's alert.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,1 @@
-BACKEND_URL=https://b7ab-2405-4802-90b2-3ec0-d81a-afd2-e0d2-8ab9.ngrok.io
+BACKEND_URL=https://2175-2405-4802-90b2-3ec0-4dee-8f0d-4ced-daf6.ngrok-free.app
