--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,8 @@
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-webrtc": "^118.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
