--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,7 @@
     "expo-checkbox": "~2.4.0",
     "expo-face-detector": "~12.2.0",
     "expo-image-manipulator": "~11.3.0",
-    "expo-linking": "^6.0.0",
+    "expo-linking": "~5.0.2",
     "expo-speech": "~11.3.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
