fix: server not return valid json, case: cannot find path

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 test/
 backend/modules/obstacles/navigate/path_planning/__init__ BAK.py
 yolov8x.pt
+DEPTH_IMAGE.jpg
+app.log
+frontend/.env
+.vscode/
