fix (client runs ok)

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-POSTGRES_URL = "postgresql://default:UsJGmn9g3wfi@ep-silent-bar-34400875.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_URL = "postgresql://default:UsJGmn9g3wfi@ep-silent-bar-34400875-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
 
 # Database
 DB_USER=postgres
